--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@prisma/client": "^5.13.0",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
+    "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.6"
+    "recharts": "^2.12.6",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
