--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "class-variance-authority": "^0.7.0",
@@ -17,6 +18,7 @@
     "dayjs": "^1.11.10",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.17",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
