--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "jobify",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.0.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.13.0",
-    "@prisma/extension-accelerate": "^1.0.0",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.32.1",
-    "@tanstack/react-query-devtools": "^5.32.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
-    "lucide-react": "^0.376.0",
-    "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.17",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "recharts": "^2.12.6",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "prisma": "^5.13.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "jobify",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "npx prisma generate && next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^2.0.0",
+        "@hookform/resolvers": "^3.3.4",
+        "@prisma/client": "^5.13.0",
+        "@prisma/extension-accelerate": "^1.0.0",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.5",
+        "@tanstack/react-query": "^5.32.1",
+        "@tanstack/react-query-devtools": "^5.32.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "dayjs": "^1.11.11",
+        "lucide-react": "^0.376.0",
+        "next": "14.2.3",
+        "next-auth": "^5.0.0-beta.17",
+        "next-themes": "^0.2.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.3",
+        "recharts": "^2.12.6",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.4"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
+        "postcss": "^8",
+        "prisma": "^5.13.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
